--- a/app/src/main/res/drawable/rect_button_red.xml
+++ b/app/src/main/res/drawable/rect_button_red.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
-    <solid android:color="#FF0000" />
+    <solid android:color="@color/pactera_red" />
     <stroke android:color="#FF0000" android:width="1dp" />
     <corners android:radius="6dp"/>
 </shape>
