--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -116,6 +116,35 @@
                     />
 
         </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="8dp"
+                    >
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="32dp"
+                            android:layout_weight="1.2"
+                            android:gravity="center_vertical"
+                            android:text="Store Type   :"
+                            android:textColor="#fff"
+                            />
+                        <Spinner
+                            android:id="@+id/sp_store_type"
+                            android:layout_width="0dp"
+                            android:layout_height="32dp"
+                            android:layout_weight="3"
+                            android:paddingStart="8dp"
+                            android:background="@drawable/edittext_backround"
+                            android:inputType="textPassword"
+                            app:layout_constraintTop_toBottomOf="@+id/et_name"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+
+                            />
+
+                </LinearLayout>
         <Button
             android:id="@+id/btn_submit"
             android:layout_width="wrap_content"
