--- a/app/src/main/res/layout/frag_one.xml
+++ b/app/src/main/res/layout/frag_one.xml
@@ -11,12 +11,45 @@
          android:layout_height="350dp"
          android:layout_centerInParent="true"
          />-->
+    <android.support.v7.widget.CardView
+        android:id="@+id/cv_refresh"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:elevation="8dp"
+        app:cardElevation="8dp"
+        android:layout_marginBottom="16dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardCornerRadius="4dp"
+        android:padding="4dp"
+        android:layout_marginEnd="10dp"
+        >
+    <ImageView android:id="@+id/iv_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:src="@drawable/ic_refresh_white_24dp"
+        android:background="@drawable/refresh_ripple"
+
+        />
+    </android.support.v7.widget.CardView>
+    <TextView android:id="@+id/tv_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/cv_refresh"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        android:text="Refresh"
+        android:padding="4dp"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Store Analytics"
         android:textColor="#000000"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_refresh"
         app:layout_constraintStart_toStartOf="parent"
         />
 
@@ -31,10 +64,12 @@
         android:id="@+id/spnerInterval"
         android:layout_width="110dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_refresh"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"/>
+
     <TextView
+        android:id="@+id/tv_wait_depiction"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -46,14 +81,14 @@
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/noOfPeople"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_centerInParent="true"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="54dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="54dp"
-        android:layout_marginTop="48dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_wait_depiction" />
 
     <LinearLayout
         android:id="@+id/ll_colors"
@@ -61,6 +96,7 @@
         android:layout_height="32dp"
         android:gravity="top|center"
         android:orientation="horizontal"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/tv_wait_time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
