--- a/app/src/main/res/layout/frag_three.xml
+++ b/app/src/main/res/layout/frag_three.xml
@@ -5,7 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white" >
+    <android.support.v7.widget.CardView
+        android:id="@+id/cv_refresh"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:elevation="8dp"
+        app:cardElevation="8dp"
+        android:layout_marginBottom="16dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardCornerRadius="4dp"
+        android:padding="4dp"
+        android:layout_marginEnd="10dp"
+        >
+        <ImageView android:id="@+id/iv_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
+            android:src="@drawable/ic_refresh_white_24dp"
+            android:background="@drawable/refresh_ripple"
+
+            />
+    </android.support.v7.widget.CardView>
+    <TextView android:id="@+id/tv_refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/cv_refresh"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        android:text="Refresh"
+        android:padding="4dp"
+        />
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
