New Feature,Second Step Verification At Login

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
 
 
 
-
+    <color name="white">#FFFFFF</color>
     <color name="blue_light">#7B95E4</color>
     <color name="orange">#FF5722</color>
     <color name="black">#000000</color>
