--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="32dp"
             android:gravity="center"
-            android:text="Operation Management App"
+            android:text="Operations Management App"
             android:textSize="@dimen/text_size_17"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
