--- a/app/src/main/res/layout-land/activity_queue1.xml
+++ b/app/src/main/res/layout-land/activity_queue1.xml
@@ -529,7 +529,7 @@
                     android:text="Default Time Interval 1 Min"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/ll_chart_border" />
+                    app:layout_constraintTop_toBottomOf="parent" />
 
                 <Button
                     android:id="@+id/btn_analytic"
@@ -547,7 +547,8 @@
                     android:textColor="#fff"
 
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/ll_chart_border" />
+                    app:layout_constraintTop_toBottomOf="parent"
+          />
 
             </android.support.constraint.ConstraintLayout>
         </ScrollView>
